# rag-chatbot

./: implemeting-streaming.md  pyproject.toml
app/: main.py
app/api/: chat.py  chat_stream.py
app/core/: lifespan.py
app/rag/: build_index.py  chain.py  embeddings.py  loader.py  prompt.py  stream_chain.py  test_chunking.py  test_embeddings.py  test_loader.py  test_rag.py  test_search.py  vectorstore.py
data/chroma/: chroma.sqlite3
data/docs/: api.md  notes.txt
